--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+gunicorn
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
