--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,22 +1,22 @@
-alembic==1.4.2
+alembic
 bs4
-click==7.1.1
+click
 discord.py
-Flask==1.1.1
-Flask-Migrate==2.5.3
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
+Flask
+Flask-Migrate
+Flask-SQLAlchemy
+Flask-WTF
 gunicorn
-itsdangerous==1.1.0
-Jinja2==2.11.1
-Mako==1.1.2
-MarkupSafe==1.1.1
-psycopg2-binary==2.8.4
-python-dateutil==2.8.1
-python-editor==1.0.4
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+psycopg2-binary
+python-dateutil
+python-editor
 pyyaml
 requests
-six==1.14.0
-SQLAlchemy==1.3.15
-Werkzeug==1.0.0
-WTForms==2.2.1
+six
+SQLAlchemy
+Werkzeug
+WTForms
