--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,22 +1,23 @@
-alembic
-bs4
-click
-discord.py
-Flask
-Flask-Migrate
-Flask-SQLAlchemy
-Flask-WTF
-gunicorn
-itsdangerous
-Jinja2
-Mako
-MarkupSafe
-psycopg2-binary
-python-dateutil
-python-editor
-pyyaml
-requests
-six
-SQLAlchemy
-Werkzeug
-WTForms
+alembic==1.4.2
+beautifulsoup==4.8.0
+bs4==0.0.1
+click==6.7
+discord.py==1.3.3
+Flask==0.12.2
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
+gunicorn==20.0.4
+itsdangerous==0.24
+Jinja2==2.10
+Mako==1.1.2
+MarkupSafe==1.0
+psycopg2-binary==2.8.5
+python-dateutil==2.8.1
+python-editor==1.0.4
+pyyaml==3.12
+requests==2.18.4
+six==1.11.0
+SQLAlchemy==1.3.16
+Werkzeug==0.14.1
+WTForms==2.2.1
