--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,4 @@
+Werkzeug==1.0.0
 alembic==1.4.2
 beautifulsoup4==4.8.0
 bs4==0.0.1
@@ -6,6 +7,7 @@ discord.py==1.3.3
 Flask==0.12.2
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
+Flask-Toastr==0.5.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==0.24
@@ -19,5 +21,4 @@ pyyaml==3.12
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.3.16
-Werkzeug==0.14.1
 WTForms==2.2.1
