--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ bs4==0.0.1
 click==6.7
 discord.py==1.3.3
 Flask==0.12.2
+Flask-Colorpicker==0.9
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-Toastr==0.5.4
