--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,25 +1,40 @@
-Werkzeug==1.0.0
+aiohttp==3.6.2
 alembic==1.4.2
+async-timeout==3.0.1
+attrs==19.3.0
 beautifulsoup4==4.8.0
 bs4==0.0.1
+certifi==2020.6.20
+chardet==3.0.4
 click==6.7
 discord.py==1.3.3
+dominate==2.5.1
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 Flask-Colorpicker==0.9
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-Toastr==0.5.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.1.2
 MarkupSafe==1.0
+multidict==4.7.6
 psycopg2-binary==2.8.5
+python-crontab==2.5.1
 python-dateutil==2.8.1
 python-editor==1.0.4
-pyyaml==3.12
+PyYAML==3.12
 requests==2.18.4
 six==1.11.0
+soupsieve==2.0.1
 SQLAlchemy==1.3.16
+urllib3==1.22
+visitor==0.1.3
+websockets==8.1
+Werkzeug==1.0.0
 WTForms==2.2.1
+yarl==1.4.2
