--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -9,7 +9,7 @@ chardet==3.0.4
 click==6.7
 discord.py==1.3.3
 dominate==2.5.1
-Flask==0.12.2
+Flask==1.0.0
 Flask-Bootstrap==3.3.7.1
 Flask-Colorpicker==0.9
 Flask-Migrate==2.5.3
@@ -19,7 +19,7 @@ Flask-WTF==0.14.3
 gunicorn==20.0.4
 idna==2.6
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2==2.10.1
 Mako==1.1.2
 MarkupSafe==1.0
 multidict==4.7.6
@@ -27,12 +27,12 @@ psycopg2-binary==2.8.5
 python-crontab==2.5.1
 python-dateutil==2.8.1
 python-editor==1.0.4
-PyYAML==3.12
-requests==2.18.4
+PyYAML==4.2b1
+requests==2.20.0
 six==1.11.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.16
-urllib3==1.22
+urllib3==1.24.2
 visitor==0.1.3
 websockets==8.1
 Werkzeug==1.0.0
